--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@langchain/core": "^0.3.72",
+    "@langchain/google-genai": "^0.2.16",
     "@vercel/analytics": "1.3.1",
     "clsx": "2.1.1",
     "framer-motion": "11.2.10",
+    "langchain": "^0.0.197",
     "lucide-react": "0.441.0",
     "marked": "12.0.2",
     "micro-memoize": "4.1.2",
